# BootCamp_Python

./: README.md
aula_1/: desafio.py  exemplo_00.py  exemplo_02.py
aula_18/: README.md  exemplo_00.py  exemplo_01.py  exemplo_02_json.py  pyproject.toml
aula_18/src/: controller.py  db.py  models.py  pokemon.db  schema.py
aula_19/: Dockerfile  README.md
aula_19/src/: database.py  main.py  models.py  test.db
aula_2/: exercicios.py
aula_3/: desafio.py  exercicios.py
aula_4/: exemplo.csv  exercicio_lista_e_dicionário.py  exercicios_dicionário.py  exercicios_função.py  exercicios_int_avan.py  função_ex.py  leitor_csv.py  tipagem_ex_3.py
aula_5/src/: using_python.py
aula_7/: exemplo.py  exercicios.py  projeto.py
aula_8/: etl.py  pipeline.py  pyproject.toml
aula_9/: exemplo.py  pyproject.toml
