[tool.poetry]
name = "aula-8"
version = "3.11.5"
description = ""
authors = ["thiiagofaria <thiago.faria.go@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.18.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
